crates/keron-lang/tests/corpus/errors/check/for_duplicate_pair_idents.keron
val m: Map<String, Int> = {"a": 1}
for (k, k) in m { reconcile k }
